# oracle-illuminating

./: README.md  oracle_data.db  pyproject.toml
src/oracle_illuminating/: __init__.py  cli.py
src/oracle_illuminating/analytics/: __init__.py  database.py  models.py  repository.py
src/oracle_illuminating/core/: __init__.py  agentic_layer.py  guardrails.py  oracle_framework.py
src/oracle_illuminating/integrations/: __init__.py  analytics.py  billing.py  feature_flags.py  inference.py  streaming.py
src/oracle_illuminating/service/: __init__.py  analytics_routes.py  app.py  models.py  oracles.py  realtime_routes.py  routes.py  subscription_routes.py
src/oracle_illuminating/workflows/: __init__.py  illumination_flow.py
tests/: test_illuminate_endpoint.py  test_illumination_flow.py
