[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-illuminating"
version = "0.1.0"
description = "Agentic AI architecture implementing the Oracle Overseer framework."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Oracle Illuminating Contributors" }
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "langchain>=0.2",
  "sqlmodel>=0.0.16",
  "prefect>=2.16",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "ruff>=0.4"
]

[project.scripts]
oracle-illuminate = "oracle_illuminating.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

